update navbar typo + add week3.html

--- a/s2-week3.html
+++ b/s2-week3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 14</title>
+    <title>A-I: S2-W3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="assets/styles.css">
@@ -32,7 +32,7 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week1.html" class="active"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
                         <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
@@ -45,7 +45,7 @@
                         <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html" class="active"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
                         <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
                     <ul class="overview-weeks">
                         <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="s2-week3.html" class="active"><strong>W3</strong> : GDI Interview & P-6</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : </a></li>
                         <li><a href="week5.html"><strong>W5</strong> : </a></li>
                         <li><a href="week6.html"><strong>W6</strong> : </a></li>
@@ -92,120 +92,77 @@
         <main class="right-panel">
 
             <section class="catalogue-sidebar">
-                <h1><strong>Week 14</strong> / Prototype 3</h1>
-            </section>
-
-            <section class="exp-row four-col-gallery">
-
-                <figure class="gallery-item">
-                    <img src="assets/images/e-1.png">
-                </figure>
-
-                <figure class="gallery-item">
-                    <img src="assets/images/e-2.png">
-                </figure>
-
-                <figure class="gallery-item">
-                    <img src="assets/images/e-3.png">
-                </figure>
-
-                <figure class="gallery-item">
-                    <img src="assets/images/e-4.png">
-                </figure>
-
+                <h1><strong>Week 3</strong> / Prologue</h1>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Prototype 3: Algorithmic Resonance</strong></h3>
+                    <h3><strong>Beginning of the Trajectory</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <!-- <div class="exp-block" style="overflow:hidden;">
-                        <video src="assets/videos/p2-visuals.mp4" autoplay muted loop playsinline alt=""
-                            style="width:100%; height:100%; object-fit:cover; flex:1; transform-origin:center; margin-bottom:20px; border: 0; transform: scale(1.0); margin-bottom: 30px;"></video>
-                    </div> -->
-                    <p style="margin-top: 0px;"><strong><em>How differently do you and a machine "hear" the same
-                                song?</em></strong>
+                    <p>There is one app that captivates millions daily. Can you guess what app that is? It's TikTok.
+                        <br><br>In
+                        Year 2, I explored this phenomenon in my academic essay <strong><em>"TikTok as Contemporary
+                                Media
+                                Spectacle"</em></strong>. I analysed TikTok through three aspects:
                     </p>
-                    <p><strong>Algorithmic Resonance</strong> expands on <strong>Experiment 1: Playlist
-                            Visualiser</strong>. It stages a direct comparison between human sensing and algorithmic
-                        analysis.</p>
-                    <p>Users are to adjust the sliders to express how they personally interpret a track. In parallel,
-                        the system runs its own examination through FFT frequency mapping, amplitude detection, and
-                        brightness calculations to produce its computational reading.</p>
-                    <p>I chose <strong>Chladni</strong> patterns because they turn interpretation into something
-                        visible. The same vibration can generate entirely different geometric forms depending on the
-                        parameters used, mirroring how humans and algorithms “read” the same input differently. This
-                        divergence is central to contemporary algorithmic life: systems classify based on measurable
-                        features, statistical tendencies, and optimisation goals, while humans sense music emotionally,
-                        intuitively, and contextually. The two interpretations rarely match.</p>
-                    <p>Each pathway generates a <strong>Chladni</strong> pattern, one shaped by <em>feeling,</em> and
-                        one shaped by <em>data.</em> Placed side by side, the visuals expose the gap between personal
-                        interpretation and algorithmic classification, prompting viewers to consider how their own
-                        analyses might align with, or drift away from the system's.</p>
-                    <p>By visualising this split, the experiment shows how algorithmic classifications, like
-                        recommendations, profiles, and labels, are not neutral truths but constructed perspectives that
-                        may misread, flatten, or bias our identities. Through <strong>Chladni,</strong> the hidden gap
-                        between lived experience and computational logic becomes observable.</p>
-                    <p><em>Read more about the algorithmic process breakdown in <strong>Prototype 3's Catalogue of
-                                Making.</em></strong></p>
-                    <!-- BUTTON ALIGNED TO LEFT, AT BOTTOM -->
-                    <a href="https://editor.p5js.org/ethel.limpy/full/l_OwHQiWU" class="launch-btn"
-                        style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;"
-                        target="_blank">
-                        Try Prototype 3
-                    </a>
-                    <!-- BUTTON: Link to Experiment 2's Catalogue of Making -->
-                    <a href="/prototype-p3.html" class="launch-btn-revert"
-                        style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;">
-                        Catalogue of Making (Prototype 3)
-                    </a>
+                    <p>
+                        <strong>⑴ Algorithmic Control:</strong> shapes feeds and fuel filter bubbles, misinformation,
+                        and viral trends<br>
+                        <strong>⑵ Mediated Reality:</strong> curated content and livestreams blur the line between real
+                        and hyperreal<br>
+                        <strong>⑶ Alienation:</strong> users commodify their identities and chase idealised personas at
+                        the expense of authenticity
+                    </p>
+                    <p>While writing this paper, I started to see how with the constant exposure of media, it causes us
+                        to be trapped in a mediated environment that is controlled by <strong>algorithms</strong>,
+                        proving that the social media apps we use are not just a platform. It is a powerful
+                        manifestation of the media spectacle in our digital age.</p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w14-interface.png" alt="" style="object-fit: contain;">
-                <figcaption style="font-size: 12px; text-align: center;">
-                    <strong>Prototype 3</strong><em> p5.js Interface</em>
-                </figcaption>
+                <img src="assets/images/media-spectacle.jpg" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
+                        Guy Debord, 1973</em></figcaption>
             </section>
 
-            <!-- ROW 2 — SPLIT ROW -->
+            <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
             <section class="exp-row split">
-                <div class="exp-block">
-                    <h3><strong>Challenges Faced</strong></h3>
+                <!-- VIDEO BLOCK -->
+                <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
+                    <div style="flex:1; overflow:hidden;">
+                        <video src="assets/videos/w1-1.mp4" autoplay loop muted playsinline
+                            style="width:100%; height:100%; object-fit:cover; transform:scale(1.1);">
+                        </video>
+                    </div>
+                    <figcaption style="font-size:12px; margin-top:10px;">
+                        <strong>The Social Dilemma</strong> <em>Netflix, 2020</em>
+                    </figcaption>
                 </div>
 
                 <div class="exp-block">
-                    <p><strong>Chladni</strong> patterns are normally created through physical vibration plates.
-                        Rebuilding these from scratch in p5.js required <strong>ChatGPT's</strong> help to use 20,000+
-                        particles, different gradient forces, and multiple plate equations.</p>
-                    <p>Initially the particles kept morphing even when the sliders aren't adjusted. I had to give it
-                        rules to ensure that it only morphs when the sliders are moving. It was challenging to design
-                        the logic that converts subjective feelings into mathematical vibration modes. I had to give
-                        each slider rules so that it changes the particle behaviour and pattern:</p>
-                    <p><strong>⑴ Energy (Low → High)</strong><br>Controls: complexity of vertical waves<br>Mapped to: n
-                        (vertical mode number)<br>More vertical complexity</p>
-                    <p><strong>⑵ Speed (Slow → Fast)</strong><br>Controls: number of horizontal waves<br>Mapped to: m
-                        (horizontal mode number)<br>More horizontal divisions</p>
-                    <p><strong>⑶ Movement (Still → Lively)</strong><br>Controls: radial movement multiplier<br>Mapped
-                        to: radialK<br>More radial ripples / circular waves</p>
-                    <p><strong>⑷ Mood (Heavy → Uplifting)</strong><br>Controls: Chladni mode formula<br>Mapped to:
-                        plateType<br>From chaotic/heavy → smooth/uplifting</p>
-                    <p><strong>⑸ Texture (Synthetic → Organic)</strong><br>Controls: which mathematical wave family is
-                        used<br>Mapped to: plateType<br>From angular/synthetic → organic/soft</p>
-                    <p><strong>⑹ Weight (Light → Heavy)</strong><br>Controls: density of radial oscillation<br>Mapped
-                        to: plateType<br>Thin/light shapes → dense/heavy shapes</p>
+                    <h2><strong>if(time==3am){emo_time();}</strong></h2>
+                    <p>Before bed, I always end up scrolling TikTok. Over time, I noticed a pattern: late at night, my
+                        feed shifts into heavier, more emotional content. It showed me videos that are more reflective
+                        or personal. However, during the day, the difference is constrasting. The same feed becomes
+                        energetic, loud, and comedic. It feels like the algorithm knows me a little too well, as it if
+                        knows exactly how I feel in that moment.</p>
+                    <p>It made me wonder: <strong><em>how does my feed know exactly how I feel?</em></strong> The timing
+                        is uncanny. Sometimes the continuous scrolling and consumption of the videos push me deeper into
+                        an existential spiral. Even on Instagram, I can talk to my friends about something in person,
+                        and suddenly it appears on my feed as an ad. The more it happens, the more it felt like the
+                        platforms are <strong>sensing, predicting, and responding</strong> to my emotional state in ways
+                        I <em>never explicitly shared</em>.</p>
+                    <p>
+                        This critical reflection sparked my drive to intern at TikTok, allowing me to work closer with
+                        the product itself, and to deepen my understanding of the algorithmic influence. <br><br>With
+                        that, this research project <strong>"A-I: Algorithmic Identities"</strong> was born.
+                    </p>
                 </div>
-            </section>
-
-            <!-- ROW 4 — FULL WIDTH IMAGE -->
-            <section class="exp-row full">
-                <video src="assets/videos/w14-hero.mp4" autoplay muted loop playsinline
-                    style="border-radius: 0px; border: 0;"></video>
             </section>
 
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
@@ -222,6 +179,7 @@
 
 
     <!-- ACCORDION SCRIPT -->
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             document.querySelectorAll(".overview-group").forEach(group => {
@@ -243,7 +201,6 @@
             });
         });
     </script>
-
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
@@ -263,7 +220,7 @@
 
             /* Load next week if exists (assuming week12 max) */
             next.addEventListener("click", () => {
-                if (current < 15) {
+                if (current < 12) {
                     window.location.href = `week${current + 1}.html`;
                 }
             });
