--- a/semester-1/week-10.html
+++ b/semester-1/week-10.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 10</title>
+    <title>A-I: S1-W10</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -32,21 +32,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html" class="active"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html" class="active"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,27 +57,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -97,7 +85,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/listening-post.jpeg" alt="">
+                <img src="/assets/images/listening-post.jpeg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>The Listening Post</strong><em>
                         Ben Rubin and Mark Hanson</em></figcaption>
             </section>
@@ -133,7 +121,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="assets/images/comparison.png" alt=""
+                <img src="/assets/images/comparison.png" alt=""
                     style="object-fit: contain; transform: scale(0.8); margin-top: 50px; margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Comparison of Task Experiment &
                         Google's Quick, Draw!</strong></figcaption>
@@ -179,7 +167,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w10-1.jpg" alt="">
+                <img src="/assets/images/w10-1.jpg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>DIA X NIKE Basketball</strong><em>
                         Kinetic Typography</em></figcaption>
             </section>
@@ -192,7 +180,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <img src="assets/images/modular.png" alt="" style="margin-bottom: 25px;"></img>
+                        <img src="/assets/images/modular.png" alt="" style="margin-bottom: 25px;"></img>
                         <figcaption style="font-size: 12px; text-align: center;">
                             <strong>Modular Thinking</strong><em> Diagram</em>
                         </figcaption>
@@ -226,7 +214,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="assets/images/text-box copy.png" alt=""
+                <img src="/assets/images/text-box copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Text Box High Fidelity
                         Mockup</strong><em>
@@ -268,7 +256,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="assets/images/response-form copy.png" alt=""
+                <img src="/assets/images/response-form copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Response Form High Fidelity
                         Mockup</strong><em>
@@ -305,7 +293,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <img src="assets/images/nodejs.png" alt=""
+                        <img src="/assets/images/nodejs.png" alt=""
                             style="margin-top: -50px; margin-bottom: -45px; object-fit: contain;"></img>
                     </div>
                     <p>In one of CiD's workshops, we learnt about Node.js. Since my experiment collects responses from
@@ -343,7 +331,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-250px;">
-                <img src="assets/images/project-structure copy.png" alt=""
+                <img src="/assets/images/project-structure copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Project Structure</strong><em>
                         VS Code</em></figcaption>
@@ -451,10 +439,10 @@
             <!-- ROW — SPLIT WITH TWO IMAGES -->
             <section class="exp-row split" style="margin-bottom: 17px;">
                 <div class="exp-block">
-                    <img src="assets/images/room-of-change-2.jpeg" alt="">
+                    <img src="/assets/images/room-of-change-2.jpeg" alt="">
                 </div>
                 <div class="exp-block">
-                    <img src="assets/images/room-of-change-3.jpeg" alt="">
+                    <img src="/assets/images/room-of-change-3.jpeg" alt="">
                 </div>
             </section>
 
@@ -462,7 +450,7 @@
             <section class="exp-row full">
                 <a href="https://giorgialupi.com/the-room-of-change" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="assets/images/room-of-change-hero.jpeg" alt="">
+                    <img src="/assets/images/room-of-change-hero.jpeg" alt="">
                     <figcaption style="font-size: 12px; text-align: left;">
                         <strong>The Room of Change</strong><em> Giorgia Lupi 2019</em>
                     </figcaption>
@@ -521,7 +509,7 @@
             <section class="exp-row full">
                 <a href="https://giorgialupi.com/the-room-of-change" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="assets/images/room-of-change-sketch.jpeg" alt="" style="object-fit: contain;">
+                    <img src="/assets/images/room-of-change-sketch.jpeg" alt="" style="object-fit: contain;">
                     <figcaption style="font-size: 12px; text-align: center;">
                         <strong>The Room of Change</strong><em> Exhibition Space Sketch</em>
                     </figcaption>
@@ -555,10 +543,10 @@
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
-                <div class="exp-block"><img src="assets/images/roc-1.png"></div>
-                <div class="exp-block"><img src="assets/images/roc-2.png"></div>
-                <div class="exp-block"><img src="assets/images/roc-3.png"></div>
-                <div class="exp-block"><img src="assets/images/roc-4.png"></div>
+                <div class="exp-block"><img src="/assets/images/roc-1.png"></div>
+                <div class="exp-block"><img src="/assets/images/roc-2.png"></div>
+                <div class="exp-block"><img src="/assets/images/roc-3.png"></div>
+                <div class="exp-block"><img src="/assets/images/roc-4.png"></div>
             </section>
 
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
@@ -600,44 +588,52 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
+            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
+            const m = window.location.pathname.match(/week-(\d+)\.html$/);
+            const current = m ? parseInt(m[1], 10) : 1;
 
-            /* Assign previous & next */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
-                }
-            });
+            if (prev) {
+                prev.addEventListener("click", () => {
+                    if (current > 1) {
+                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
+                    }
+                });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 12) {
-                    window.location.href = `week${current + 1}.html`;
-                }
-            });
+            if (next) {
+                next.addEventListener("click", () => {
+                    window.location.href = `week-${current + 1}.html`;
+                });
+            }
 
-            /* Scroll to top */
-            document.getElementById("topBtn").addEventListener("click", () => {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
+            if (topBtn) {
+                topBtn.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+            }
 
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+        });
 
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
+        /* Scroll to top */
+        document.getElementById("topBtn").addEventListener("click", () => {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        });
 
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
-            });
+        const group = document.querySelector(".overview-group");
+        const btn = document.getElementById("overviewToggle");
+        const symbol = document.getElementById("overviewSymbol");
+
+        btn.setAttribute("aria-expanded", "false");
+        symbol.textContent = "+";
+
+        btn.addEventListener("click", () => {
+            const isOpen = group.classList.toggle("is-open");
+            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+            symbol.textContent = isOpen ? "−" : "+";
         });
     </script>
 
