--- a/semester-1/week-13.html
+++ b/semester-1/week-13.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 13</title>
+    <title>A-I: S1-W13</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -32,21 +32,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html" class="active"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html" class="active"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,27 +57,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -112,10 +100,10 @@
             <!-- ROW — SPLIT WITH TWO IMAGES -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <img src="assets/images/w13-1.JPG" alt="" style="object-fit: cover;">
+                    <img src="/assets/images/w13-1.JPG" alt="" style="object-fit: cover;">
                 </div>
                 <div class="exp-block">
-                    <img src="assets/images/w13-2.JPG" alt="" style="object-fit: cover;">
+                    <img src="/assets/images/w13-2.JPG" alt="" style="object-fit: cover;">
                 </div>
             </section>
 
@@ -165,13 +153,13 @@
             <!-- 3 COLUMNS -->
             <section class="exp-row cols-3" style="margin-bottom: 20px;">
                 <div class="exp-block">
-                    <img src="assets/images/w13-5.JPG">
+                    <img src="/assets/images/w13-5.JPG">
                 </div>
                 <div class="exp-block">
-                    <img src="assets/images/w13-3.JPG">
+                    <img src="/assets/images/w13-3.JPG">
                 </div>
                 <div class="exp-block">
-                    <img src="assets/images/w13-6.jpg">
+                    <img src="/assets/images/w13-6.jpg">
                 </div>
             </section>
 
@@ -179,7 +167,7 @@
             <section class="exp-row full">
                 <a href="https://www.instagram.com/p/CstgUe1SDmZ/?img_index=7&igsh=ZHU2YTk1dTFlYTlm" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="assets/images/w13-4.jpg" alt="">
+                    <img src="/assets/images/w13-4.jpg" alt="">
                     <figcaption style="font-size: 12px; text-align: left;">
                         <strong>On the way home, I thought I saw a dead rat</strong><em> Vincent Leow 2023</em>
                     </figcaption>
@@ -252,44 +240,52 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
+            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
+            const m = window.location.pathname.match(/week-(\d+)\.html$/);
+            const current = m ? parseInt(m[1], 10) : 1;
 
-            /* Assign previous & next */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
-                }
-            });
+            if (prev) {
+                prev.addEventListener("click", () => {
+                    if (current > 1) {
+                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
+                    }
+                });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 15) {
-                    window.location.href = `week${current + 1}.html`;
-                }
-            });
+            if (next) {
+                next.addEventListener("click", () => {
+                    window.location.href = `week-${current + 1}.html`;
+                });
+            }
 
-            /* Scroll to top */
-            document.getElementById("topBtn").addEventListener("click", () => {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
+            if (topBtn) {
+                topBtn.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+            }
 
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+        });
 
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
+        /* Scroll to top */
+        document.getElementById("topBtn").addEventListener("click", () => {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        });
 
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
-            });
+        const group = document.querySelector(".overview-group");
+        const btn = document.getElementById("overviewToggle");
+        const symbol = document.getElementById("overviewSymbol");
+
+        btn.setAttribute("aria-expanded", "false");
+        symbol.textContent = "+";
+
+        btn.addEventListener("click", () => {
+            const isOpen = group.classList.toggle("is-open");
+            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+            symbol.textContent = isOpen ? "−" : "+";
         });
     </script>
 
