--- a/semester-1/week-15.html
+++ b/semester-1/week-15.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 15</title>
+    <title>A-I: S1-W15</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -32,21 +32,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html" class="active"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html" class="active"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,27 +57,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -97,7 +85,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="assets/videos/e7-hover.mp4" autoplay muted loop playsinline
+                <video src="/assets/videos/e7-hover.mp4" autoplay muted loop playsinline
                     style="border-radius: 0px; border: 0;"></video>
             </section>
 
@@ -148,7 +136,7 @@
                         Try Experiment 7
                     </a>
                     <!-- BUTTON: Link to Experiment 2's Catalogue of Making -->
-                    <a href="/experiment-e7.html" class="launch-btn-revert"
+                    <a href="/experiments/experiment-7.html" class="launch-btn-revert"
                         style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;">
                         Catalogue of Making (Experiment 7)
                     </a>
@@ -167,10 +155,10 @@
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
-                <div class="exp-block"><img src="assets/images/ascii_experiment_canvas (4).png"></div>
-                <div class="exp-block"><img src="assets/images/ascii_experiment_canvas (1).png"></div>
-                <div class="exp-block"><img src="assets/images/ascii_experiment_canvas (3).png"></div>
-                <div class="exp-block"><img src="assets/images/ascii_experiment_canvas (5).png"></div>
+                <div class="exp-block"><img src="/assets/images/ascii_experiment_canvas (4).png"></div>
+                <div class="exp-block"><img src="/assets/images/ascii_experiment_canvas (1).png"></div>
+                <div class="exp-block"><img src="/assets/images/ascii_experiment_canvas (3).png"></div>
+                <div class="exp-block"><img src="/assets/images/ascii_experiment_canvas (5).png"></div>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -202,7 +190,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w15-p4.jpeg" alt="" style="object-fit: cover;">
+                <img src="/assets/images/w15-p4.jpeg" alt="" style="object-fit: cover;">
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -245,7 +233,7 @@
                         Try Prototype 4
                     </a>
                     <!-- BUTTON: Link to Experiment 2's Catalogue of Making -->
-                    <a href="/prototype-p4.html" class="launch-btn-revert"
+                    <a href="/prototypes/prototype-4.html" class="launch-btn-revert"
                         style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;">
                         Catalogue of Making (Prototype 4)
                     </a>
@@ -264,19 +252,19 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p4-id-20.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p4-id-20.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p4-id-21.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p4-id-21.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p4-id-22.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p4-id-22.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p4-id-23.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p4-id-23.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
             </section>
@@ -316,7 +304,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w15-hero.jpg" alt="">
+                <img src="/assets/images/w15-hero.jpg" alt="">
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -373,25 +361,37 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
+            const LAST_WEEK = 15;
 
-            /* Assign previous & next */
+            // Match /semester-1/week-1.html ... /semester-1/week-15.html
+            const m = window.location.pathname.match(/week-(\d+)\.html$/);
+            const current = m ? parseInt(m[1], 10) : 1;
+
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
+            // Prev button behaviour
+            if (prev) {
+                if (current <= 1) {
+                    prev.style.display = "none";
+                } else {
+                    prev.addEventListener("click", () => {
+                        window.location.href = `week-${current - 1}.html`;
+                    });
                 }
-            });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 15) {
-                    window.location.href = `week${current + 1}.html`;
+            // Next button behaviour (HIDE on last week)
+            if (next) {
+                if (current >= LAST_WEEK) {
+                    next.style.display = "none";
+                } else {
+                    next.addEventListener("click", () => {
+                        window.location.href = `week-${current + 1}.html`;
+                    });
                 }
+            }
             });
 
             /* Scroll to top */
@@ -411,7 +411,6 @@
                 btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
                 symbol.textContent = isOpen ? "−" : "+";
             });
-        });
     </script>
 
 </body>
