--- a/semester-1/week-4.html
+++ b/semester-1/week-4.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 4</title>
+    <title>A-I: S1-W4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -32,21 +32,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html" class="active"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html" class="active"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,27 +57,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -123,7 +111,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w3-feedback.jpg" alt=""
+                <img src="/assets/images/w3-feedback.jpg" alt=""
                     style="object-fit: contain; margin-top: -190px; margin-bottom: -20px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>RPO Draft Consult Feedback</strong>
                 </figcaption>
@@ -157,7 +145,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/datafication-refined.png" alt=""
+                <img src="/assets/images/datafication-refined.png" alt=""
                     style="object-fit: contain; margin-top: -40px; margin-bottom: -20px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Relationship Diagram</strong><em>
                         Conceptual Model</em>
@@ -200,7 +188,7 @@
                     <figure class="exp-block"
                         style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                        <img src="assets/images/lev-manovich-on-broadway.jpg" alt=""
+                        <img src="/assets/images/lev-manovich-on-broadway.jpg" alt=""
                             style="width:100%; height:100%; object-fit:cover; flex:1;">
 
                         <figcaption style="font-size:12px; margin-top:20px; text-align:left;">
@@ -217,7 +205,7 @@
                     <figure class="exp-block"
                         style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                        <img src="assets/images/refik-analdol-unsupervised.jpg" alt=""
+                        <img src="/assets/images/refik-analdol-unsupervised.jpg" alt=""
                             style="width:100%; height:100%; object-fit:cover; flex:1;">
 
                         <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
@@ -257,19 +245,19 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/ana-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/ana-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/ana-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/ana-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/ana-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/ana-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/ana-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/ana-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
             </section>
@@ -282,7 +270,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <video src="assets/videos/p1-hover.mp4" autoplay muted loop playsinline alt=""
+                        <video src="/assets/videos/p1-hover.mp4" autoplay muted loop playsinline alt=""
                             style="width:100%; object-fit:contain; flex:1; transform-origin:center; margin-bottom:20px; border: 0;"></video>
                     </div>
                     <p>For <strong>Prototype 1: Feed Your Garden,</strong> I wanted to explore my readings on data
@@ -303,7 +291,7 @@
                         Try Prototype 1
                     </a>
                     <!-- BUTTON: Link to Experiment 2's Catalogue of Making -->
-                    <a href="/prototype-p1.html" class="launch-btn-revert"
+                    <a href="/prototypes/prototype-1.html" class="launch-btn-revert"
                         style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;">
                         Catalogue of Making (Prototype 1)
                     </a>
@@ -312,7 +300,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/w4-plan.png" alt="" style="object-fit: contain;">
+                <img src="/assets/images/w4-plan.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Prototype 1</strong> Ideation Mindmap
                 </figcaption>
             </section>
@@ -348,7 +336,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-20px;">
-                <img src="assets/images/experiment-2-code-2.png" alt="" style="object-fit: contain;">
+                <img src="/assets/images/experiment-2-code-2.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: left; margin-top: -27px;"><strong>Prototype 1</strong>
                     Map Shapes to Traits</figcaption>
             </section>
@@ -390,7 +378,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-20px;">
-                <img src="assets/images/experiment-2-code-4.png" alt="" style="object-fit: contain;">
+                <img src="/assets/images/experiment-2-code-4.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: left; margin-top: -27px;"><strong>Prototype 1</strong>
                     Garden Archive</figcaption>
             </section>
@@ -426,28 +414,28 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p1-01.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p1-01.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>User:</strong> Felicia
                     </figcaption>
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p1-02.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p1-02.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>User:</strong> Ryan
                     </figcaption>
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p1-03.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p1-03.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>User:</strong> Li Ling
                     </figcaption>
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/p1-04.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p1-04.jpg" style="width:100%; height:100%; object-fit:cover; flex:1;">
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>User:</strong> Damien
                     </figcaption>
@@ -494,44 +482,52 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
+            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
+            const m = window.location.pathname.match(/week-(\d+)\.html$/);
+            const current = m ? parseInt(m[1], 10) : 1;
 
-            /* Assign previous & next */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
-                }
-            });
+            if (prev) {
+                prev.addEventListener("click", () => {
+                    if (current > 1) {
+                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
+                    }
+                });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 12) {
-                    window.location.href = `week${current + 1}.html`;
-                }
-            });
+            if (next) {
+                next.addEventListener("click", () => {
+                    window.location.href = `week-${current + 1}.html`;
+                });
+            }
 
-            /* Scroll to top */
-            document.getElementById("topBtn").addEventListener("click", () => {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
+            if (topBtn) {
+                topBtn.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+            }
 
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+        });
 
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
+        /* Scroll to top */
+        document.getElementById("topBtn").addEventListener("click", () => {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        });
 
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
-            });
+        const group = document.querySelector(".overview-group");
+        const btn = document.getElementById("overviewToggle");
+        const symbol = document.getElementById("overviewSymbol");
+
+        btn.setAttribute("aria-expanded", "false");
+        symbol.textContent = "+";
+
+        btn.addEventListener("click", () => {
+            const isOpen = group.classList.toggle("is-open");
+            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+            symbol.textContent = isOpen ? "−" : "+";
         });
     </script>
 
