--- a/semester-2/week-1.html
+++ b/semester-2/week-1.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 1</title>
+    <title>A-I: S2-W1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -34,21 +34,21 @@
                         <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -58,27 +58,15 @@
                         <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html" class="active"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html" class="active"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -129,9 +117,25 @@
                 </a>
             </section>
 
-            <section class="exp-row split" style="margin-top:-80px;">
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <h3><strong>Feedback Breakdown</strong></h3>
+                </div>
                 <div class="exp-block">
                     <h3><strong>"Chapters"</strong></h3>
+                    <!-- Clickable image -->
+                    <img src="assets/images/s2-w1-chapters.jpg" alt="" class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:contain; flex:1; cursor:pointer;">
+
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                        <strong>"Chapters" as Compartments</strong> <em>Metaphoric Illustration</em>
+                    </figcaption>
+
+                    <!-- Lightbox modal -->
+                    <div id="lightbox" class="lightbox">
+                        <img id="lightbox-img" src="" alt="">
+                    </div>
                     <p>During the consultation, the idea of “chapters” was clarified as a metaphor rather than a
                         structural requirement. Instead of referring to literal book chapters, Andreas described it as a
                         shelf with multiple compartments, where each compartment represents an experiment. The issue was
@@ -139,9 +143,21 @@
                         function as a coherent whole. This reframing made it evident that my experiments need to be
                         understood relationally; each one linking to the next under a single unifying pillar.</p>
                 </div>
+            </section>
 
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <p></p>
+                </div>
                 <div class="exp-block">
                     <h3><strong>Framework</strong></h3>
+                    <!-- Clickable image -->
+                    <img src="assets/images/s2-w1-framework.jpg" alt="" class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:contain; flex:1; cursor:pointer;">
+
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                        <strong>Exhibition Design Framework</strong> <em>Time / Process Flow</em>
+                    </figcaption>
                     <p>Exhibition design emerged as a useful framework for this, not as a mandatory final outcome, but
                         as a way to think through sequencing, narrative, and how viewers move from one experiment to
                         another. While the experiments from Semester 1 may not yet qualify as exhibition-ready works,
@@ -151,9 +167,19 @@
                 </div>
             </section>
 
-            <section class="exp-row split" style="margin-top:-80px;">
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <p></p>
+                </div>
                 <div class="exp-block">
                     <h3><strong>Dissertation Planning</strong></h3>
+                    <!-- Clickable image -->
+                    <img src="assets/images/s2-w1-diss-structure.jpg" alt="" class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:contain; flex:1; cursor:pointer;">
+
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                        <strong>Dissertation Structure</strong> <em>Process Diagram</em>
+                    </figcaption>
                     <p>Given the limited timeframe, the dissertation now functions less as documentation of a completed
                         exhibition and more as a process of planning and articulation. The first half focuses on
                         conceptualising the exhibition framework, while the second half addresses how this framework
@@ -161,11 +187,23 @@
                         is on developing one new prototype in Semester 2 as a transition piece, positioned alongside
                         Semester 1 works to signal this shift. The discussion section therefore looks both backward and
                         forward: reflecting on how earlier experiments inform future making, and outlining how these
-                        learnings lead towards an exhibition proposal.</p>
+                        learnings lead towards an exhibition proposal</p>
                 </div>
+            </section>
 
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <p></p>
+                </div>
                 <div class="exp-block">
                     <h3><strong>Exhibition Proposal</strong></h3>
+                    <!-- Clickable image -->
+                    <img src="assets/images/s2-w1-context.jpg" alt="" class="lightbox-trigger"
+                        style="width:100%; height:100%; object-fit:contain; flex:1; cursor:pointer;">
+
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                        <strong>Context / Scale</strong> <em>Diagram</em>
+                    </figcaption>
                     <p>Importantly, this proposal does not need to be realised; it can exist as a speculative
                         contribution that could sit within a larger exhibition on algorithms, rather than a standalone
                         curated show. Framing my work as a contributor rather than a curator significantly narrows the
