--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: Week 1</title>
+    <title>A-I: S2-W2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -33,21 +33,21 @@
                         <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,27 +57,15 @@
                         <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html" class="active"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
-                        <li><a href="week4.html"><strong>W4</strong> : </a></li>
-                        <li><a href="week5.html"><strong>W5</strong> : </a></li>
-                        <li><a href="week6.html"><strong>W6</strong> : </a></li>
-                        <li><a href="week7.html"><strong>W7</strong> : </a></li>
-                        <li><a href="week8.html"><strong>W8</strong> : </a></li>
-                        <li><a href="week9.html"><strong>W9</strong> : </a></li>
-                        <li><a href="week10.html"><strong>W10</strong> : </a></li>
-                        <li><a href="week11.html"><strong>W11</strong> : </a></li>
-                        <li><a href="week12.html"><strong>W12</strong> : </a></li>
-                        <li><a href="week13.html"><strong>W13</strong> : </a></li>
-                        <li><a href="week14.html"><strong>W14</strong> : </a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : </a></li>
+                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="/semester-2/week-2.html" class="active"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
