root pages path issues

--- a/catalogue.html
+++ b/catalogue.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>A-I: Catalogue of Making</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.png" />
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
       <div class="site-title-block">
         <div class="site-kicker">
-          <a href="/index.html">A-I: Algorithmic Identities</a>
+          <a href="index.html">A-I: Algorithmic Identities</a>
         </div>
         <p class="site-description">
           A design-research project exploring how our digital identities are co-constructed by algorithms,
@@ -64,9 +64,9 @@
             <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
           </ul>
         </div>
-        <div class="nav-group"><a class="nav-link active" href="/catalogue.html">Catalogue of Making</a></div>
-        <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
-        <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
+        <div class="nav-group"><a class="nav-link active" href="catalogue.html">Catalogue of Making</a></div>
+        <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
+        <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
       </nav>
 
       <div class="left-rail-footer">
