--- a/repository.html
+++ b/repository.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <title>A-I: Repository</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="assets/styles.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- LEFT NAVIGATION -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
