--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="assets/styles.css">
+    <base href="/algorithmic-identities/">
 </head>
 
 <body>
