--- a/semester-1/week-15.html
+++ b/semester-1/week-15.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>A-I: S1-W15</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/algorithmic-identities/favicon.png" />
     <link rel="stylesheet" href="/assets/styles.css">
+    <base href="/algorithmic-identities/">
 </head>
 
 <body>
