sem-1-week-1 <head> fix

--- a/semester-1/week-1.html
+++ b/semester-1/week-1.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>A-I: S1-W1</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/algorithmic-identities/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
-    <base href="/algorithmic-identities/">
+  <meta charset="UTF-8">
+  <title>A-I: S1-W1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <base href="/algorithmic-identities/">
+
+  <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
 
 <body>
