sem-1-week-1 path and head fix

--- a/semester-1/week-1.html
+++ b/semester-1/week-1.html
@@ -9,7 +9,7 @@
   <base href="/algorithmic-identities/">
 
   <link rel="icon" href="favicon.png" />
-  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -116,7 +116,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/media-spectacle.jpg" alt="">
+                <img src="assets/images/media-spectacle.jpg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
                         Guy Debord, 1973</em></figcaption>
             </section>
@@ -126,7 +126,7 @@
                 <!-- VIDEO BLOCK -->
                 <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
                     <div style="flex:1; overflow:hidden;">
-                        <video src="/assets/videos/w1-1.mp4" autoplay loop muted playsinline
+                        <video src="assets/videos/w1-1.mp4" autoplay loop muted playsinline
                             style="width:100%; height:100%; object-fit:cover; transform:scale(1.1);">
                         </video>
                     </div>
